<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/tudo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_pedidos_voltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/title_conta"
                android:textColor="@color/purple_800"
                android:textSize="40dp" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Add the views that you want to scroll here -->

                <LinearLayout
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtNomeEmp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/username"
                        android:textColor="@color/purple_800"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/input_global"
                        android:drawablePadding="15dp"
                        android:ems="10"
                        android:fontFamily="@font/poppins"
                        android:hint="Username"
                        android:inputType="text"
                        android:padding="15dp"
                        android:textColor="@color/purple_800"
                        android:textColorHighlight="@color/purple_800"
                        android:textColorHint="@color/purple_800"
                        android:textSize="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/telefone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTelEmp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/conta_telefone"
                        android:textColor="@color/purple_800"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/telEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/input_global"
                        android:drawablePadding="15dp"
                        android:ems="10"
                        android:fontFamily="@font/poppins"
                        android:hint="Telefone"
                        android:inputType="phone"
                        android:padding="15dp"
                        android:textColor="@color/purple_800"
                        android:textColorHighlight="@color/purple_800"
                        android:textColorHint="@color/purple_800"
                        android:textSize="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtEmailEmp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/conta_email"
                        android:textColor="@color/purple_800"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/input_global"
                        android:drawablePadding="15dp"
                        android:ems="10"
                        android:fontFamily="@font/poppins"
                        android:hint="Email"
                        android:inputType="textWebEmailAddress"
                        android:padding="15dp"
                        android:textColor="@color/purple_800"
                        android:textColorHighlight="@color/purple_800"
                        android:textColorHint="@color/purple_800"
                        android:textSize="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtPassNovaEmp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/conta_password"
                        android:textColor="@color/purple_800"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/passAntigaEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/input_global"
                        android:drawablePadding="15dp"
                        android:ems="10"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/conta_passAtual"
                        android:inputType="textPassword"
                        android:padding="15dp"
                        android:textColor="@color/purple_800"
                        android:textColorHighlight="@color/purple_800"
                        android:textColorHint="@color/purple_800"
                        android:textSize="14dp" />

                    <EditText
                        android:id="@+id/passNovaEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/input_global"
                        android:drawablePadding="15dp"
                        android:ems="10"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/conta_passNova"
                        android:inputType="textPassword"
                        android:padding="15dp"
                        android:textColor="@color/purple_800"
                        android:textColorHighlight="@color/purple_800"
                        android:textColorHint="@color/purple_800"
                        android:textSize="14dp" />

                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:background="@drawable/round_border_button11"
            android:fontFamily="@font/poppins"
            android:text="@string/conta_guardarAlt"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:stateListAnimator="@null"
            android:elevation="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0"
            android:background="@drawable/round_border_button11_8radius_white"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:fontFamily="@font/poppins"
            android:text="@string/conta_terminar"
            android:textAllCaps="false"
            android:textColor="@color/purple_800"
            android:textSize="14dp" />

    </LinearLayout>
</LinearLayout>