<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foodeat" />

    <TextView
        android:id="@+id/txt_preco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/login"
        android:textColor="@color/purple_800"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/txt_quantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/insert_data_message"
        android:textColor="@color/purple_800"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_preco" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_border_inputbox11"
        android:drawablePadding="15dp"
        android:fontFamily="@font/poppins"
        android:hint="Email"
        android:inputType="textWebEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/purple_800"
        app:layout_constraintTop_toBottomOf="@+id/txt_quantidade"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_border_inputbox11"
        android:drawablePadding="15dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/purple_800"
        android:textColorHighlight="#80000000"
        android:textColorHint="@color/purple_800"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_editor_absoluteX="45dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="0"
        android:height="60dp"
        android:background="@drawable/round_border_button11_8radius"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login_entrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="-16dp" />

    <CheckBox
        android:id="@+id/checkBoxRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:buttonTint="@color/purple_800"
        android:text="@string/remember_me"
        android:textColor="@color/purple_800"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--  PARA CRIAR UMA SHADOW TODA CAGADA   -->
    <!-- android:background="@drawable/shadow"-->
